--- a/Student_Data.ipynb
+++ b/Student_Data.ipynb
@@ -1497,8 +1497,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Pretty much, here I learnt how to use Pandas Python\n",
-    "#with a lot of functions like iloc and loc to filter data and get the results I want from the csv file. "
+    "#When we talk about data, a lot of info can be retrieved from them. In this particular case, we could have gotten the \n",
+    "#following findings: -how budget was used by grades and type of school; -average expense per student, per school \n",
+    "#type. -all this data could be summarized in a graph. -using Paretto chart, determining the most important school in \n",
+    "#this dataframe, among other."
    ]
   },
   {
